--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=glowbyte
 spring.datasource.password=password
 
-
+# jms properties
+spring.activemq.broker-url=tcp://localhost:8161
 
