--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
 # database properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5433/glowbyte_db
 spring.datasource.username=glowbyte
 spring.datasource.password=password
-
-# jms properties
-spring.activemq.broker-url=tcp://localhost:8161
 
