--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.9'
 services:
-  #activemq:
-  #  image: rmohr/activemq:5.15.9-alpine
-  #  restart: always
-  #  ports:
-  #    - "8161:8161"
-  #  container_name: activemq
+  activemq:
+    image: rmohr/activemq:5.15.9-alpine
+    restart: always
+    ports:
+      - "61616:61616"
+    container_name: activemq
 
   postgres:
     build:
@@ -16,3 +16,4 @@ services:
       POSTGRES_PASSWORD: "password"
     ports:
       - "5433:5432"
+    container_name: postgres
