--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,9 @@
 spring.datasource.url=jdbc:postgresql://localhost:5433/glowbyte_db
 spring.datasource.username=glowbyte
 spring.datasource.password=password
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# camel properties
+camel.component.activemq.broker-url=tcp://localhost:61616
+camel.component.activemq.username=admin
+camel.component.activemq.password=admin
