--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 
         <dependency>
             <groupId>org.apache.camel</groupId>
-            <artifactId>camel-pgevent</artifactId>
+            <artifactId>camel-jdbc</artifactId>
             <version>3.20.0</version>
         </dependency>
 
