--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 version: '3.9'
 services:
   activemq:
-    image: rmohr/activemq:5.15.9-alpine
+    image: rmohr/activemq:5.15.9
     restart: always
     ports:
       - "61616:61616"
+      - "8161:8161"
     container_name: activemq
 
   postgres:
