refactor root for spring-boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,5 @@ spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # camel properties
-camel.component.activemq.broker-url=tcp://localhost:61616
-camel.component.activemq.username=admin
-camel.component.activemq.password=admin
+spring.activemq.broker-url=tcp://localhost:61616
+camel.springboot.main-run-controller=true
