--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-spring-boot</artifactId>
-            <version>3.20.0</version>
+            <version>${camel.version}</version>
         </dependency>
 
         <dependency>
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-spring-boot-starter</artifactId>
-            <version>3.20.0</version>
+            <version>${camel.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.yaml</groupId>
@@ -71,7 +71,7 @@
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-activemq-starter</artifactId>
-            <version>3.20.0</version>
+            <version>${camel.version}</version>
         </dependency>
 
         <!--Plugin dependencies-->
@@ -84,7 +84,7 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-jaxb</artifactId>
-            <version>3.20.0</version>
+            <version>${camel.version}</version>
         </dependency>
     </dependencies>
 
