add connect with kafka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 # camel properties
 spring.activemq.broker-url=tcp://localhost:61616
 camel.springboot.main-run-controller=true
+
+
+camel.component.kafka.brokers=localhost:9094
