--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
         <camel.version>3.20.0</camel.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.33</version>
+        </dependency>
+
+
         <!--DB dependencies-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
